<resources>
    <string name="app_name">SocialIntegration</string>
    <string name="linkedIn">LinkedIn</string>
    <string name="init_session">Init session</string>
    <string name="clear_session">Clear session</string>
    <string name="access_token_value">Access Token Value</string>
    <string name="api_call">API call</string>
    <string name="deep_link">DeepLink</string>
    <string name="package_info">Package Info</string>
    <string name="show_pack_hash">show pack / hash</string>
    <string name="facebook">Facebook</string>
    <string name="google_plus">Google Plus</string>
    <string name="twitter">Twitter</string>
    <string name="get_place_here">Get Place Here</string>
    <string name="place_picker">Place Picker</string>
    <string name="auto_complete">Auto Complete</string>
    <string name="get_place_details">Get Place Details</string>
    <string name="api_call_to_fetch_my_profile">Api Call To Fetch My Profile</string>
    <string name="share_comment">Share Comment</string>
    <string name="api_call_to_share_activity">Api Call To Share Activity</string>
    <string name="member_id">Member Id</string>
    <string name="open_profile">Open profile</string>
    <string name="view_my_profile">View My Profile</string>
    <string name="nothing">Nothing</string>

    <string name="facebook_app_id">329343964167110</string>
    <string name="fb_login_protocol_scheme">fb329343964167110</string>
    <string name="google_place_api">AIzaSyA8zkM0rUkzQbgib5f1sQD5Y3Q_9_SpFPM</string>
    <string name="google_map_api">AIzaSyBL9ggdHPI87J9DBQ0yCIj2AW_YFRuleG0</string>

</resources>
