<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_get_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/get_place_here" />

    <fragment
        android:id="@+id/fragment_place_autocomplete"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_get_place"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/button_place_picker"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:text="@string/place_picker" />

    <Button
        android:id="@+id/button_place_auto_complete"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_below="@+id/button_place_picker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/auto_complete" />

    <Button
        android:id="@+id/button_place_details"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_below="@+id/button_place_auto_complete"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/get_place_details" />

</RelativeLayout>
