<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/deeplink_screen_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/member_id" />

        <EditText
            android:id="@+id/edit_text_deeplink_profile_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/deeplink_screen_msg"
            android:layout_toEndOf="@+id/deeplink_screen_msg"
            android:text="" />

        <Button
            android:id="@+id/button_deeplink_open_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/open_profile" />

    </RelativeLayout>

    <Button
        android:id="@+id/button_my_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_my_profile" />

    <TextView
        android:id="@+id/text_view_deeplink_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
